--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ title: Home
   {% endfor %}
 </div>
 
+{% if paginator.page > 1 %}
 <div class="pagination">
   {% if paginator.next_page %}
     <a class="pagination-item older" href="/page{{paginator.next_page}}">Older</a>
@@ -35,4 +36,4 @@ title: Home
     <span class="pagination-item newer">Newer</span>
   {% endif %}
 </div>
-
+{% endif %}
