--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@ layout: default
 title: Home
 ---
 
-<!--div class="block">
+<div class="block">
   <h1 class="block-title">Works</h1>
-  <p>I will let you know later.</p>
-</div-->
+  <ul class="block-list">
+    <li>
+      <a class="block-link" href="/design-pattern">把 《Design Pattern》 读薄</a>
+      <span class="block-meta">Aug 2014</span>
+    </li>
+  </ul>
+</div>
 
 <div class="block">
   <h1 class="block-title">Posts</h1>
