New post: data mining project.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@ title: Home
   <h1 class="block-title">Works</h1>
   <ul class="block-list">
     <li>
+      <a class="block-link" href="http://nbviewer.ipython.org/gist/bcho/7fc750da00c130713bd6">基于分类算法的电影票房预测 </a>
+      <span class="block-meta">Jun 2015</span>
+    </li>
+    <li>
       <a class="block-link" href="/design-pattern">把 《Design Pattern》 读薄</a>
       <span class="block-meta">Aug 2014</span>
     </li>
