reading notes: 2015 July Week 4.

--- a/reading-notes/index.html
+++ b/reading-notes/index.html
@@ -7,6 +7,10 @@ title: Reading Notes
   <h1 class="block-title">2015 July</h1>
   <ul class="block-list">
     <li>
+      <a class="block-link" href="https://github.com/tiancaiamao/go-internals/blob/master/ebook/05.3.md">Go Scheduler</a>
+      <span class="block-meta">Week 4</span>
+    </li>
+    <li>
       <a class="block-link" href="https://www.evernote.com/shard/s19/sh/c177894e-ff59-4fbd-9157-4e503d2c9723/af63bb3409cb6030">Web Crawler</a>
       <span class="block-meta">Week 3</span>
     </li>
