reading notes: record the reading progress

--- a/reading-notes/index.html
+++ b/reading-notes/index.html
@@ -4,6 +4,16 @@ title: Reading Notes
 ---
 
 <div class="block">
+  <h1 class="block-title">2015 September</h1>
+  <ul class="block-list">
+    <li>
+      <a class="block-link" title="The notes are acutally living in the blank side of these papers :)">GFS / Bigtable / MapReduce / Chubby</a>
+      <span class="block-meta">Week 1~4</span>
+    </li>
+  </ul>
+</div>
+
+<div class="block">
   <h1 class="block-title">2015 July</h1>
   <ul class="block-list">
     <li>
