reading notes: 2015 October week 1.

--- a/reading-notes/index.html
+++ b/reading-notes/index.html
@@ -4,6 +4,20 @@ title: Reading Notes
 ---
 
 <div class="block">
+  <h1 class="block-title">2015 October</h1>
+  <ul class="block-list">
+    <li>
+      <a href="https://quip.com/wk2pAaL7HkMB" class="block-link">Consistent Hash</a>
+      <span class="block-meta">Week 1</span>
+    </li>
+    <li>
+      <a href="https://quip.com/OYGoAmkUZGo4" class="block-link">Scalability</a>
+      <span class="block-meta">Week 1</span>
+    </li>
+  </ul>
+</div>
+
+<div class="block">
   <h1 class="block-title">2015 September</h1>
   <ul class="block-list">
     <li>
