reading notes: 2015 October week 2.

--- a/reading-notes/index.html
+++ b/reading-notes/index.html
@@ -7,6 +7,14 @@ title: Reading Notes
   <h1 class="block-title">2015 October</h1>
   <ul class="block-list">
     <li>
+      <a href="http://dcaoyuan.github.io/papers/pdfs/Scalability.pdf" class="block-link">走向分布式</a>
+      <span class="block-meta">Week 2</span>
+    </li>
+    <li>
+      <a href="https://groups.google.com/forum/#!topic/redis-db/rXXMCLNkNSs" title="使用 timestamp 来做 score" class="block-link">Pattern for expiring set members</a>
+      <span class="block-meta">Week 2</span>
+    </li>
+    <li>
       <a href="https://quip.com/wk2pAaL7HkMB" class="block-link">Consistent Hash</a>
       <span class="block-meta">Week 1</span>
     </li>
