reading notes: 2015 October week 4.

--- a/reading-notes/index.html
+++ b/reading-notes/index.html
@@ -7,6 +7,10 @@ title: Reading Notes
   <h1 class="block-title">2015 October</h1>
   <ul class="block-list">
     <li>
+      <a href="https://quip.com/7wgJAT19oZsO" class="block-link">Data Warehouse Concept</a>
+      <span class="block-meta">Week 4</span>
+    </li>
+    <li>
       <a href="http://dcaoyuan.github.io/papers/pdfs/Scalability.pdf" class="block-link">走向分布式</a>
       <span class="block-meta">Week 2</span>
     </li>
