--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -80,7 +80,7 @@ title: 欲望清单
       <span class="checklist-meta">2015 Nov. 7</span>
     </li>
     <li class="checklist-item">
-      <input type="checkbox" class="checklist-box">
+      <input type="checkbox" class="checklist-box" checked>
       <span class="checklist-desc">表盘更小的 Garmin 表</span>
       <span class="checklist-meta">2015 Nov. 7</span>
     </li>
