--- a/wishlist/index.html
+++ b/wishlist/index.html
@@ -33,7 +33,7 @@ title: 欲望清单
       <span class="checklist-meta">2015 Nov. 7</span>
     </li>
     <li class="checklist-item">
-      <input type="checkbox" class="checklist-box">
+      <input type="checkbox" checked class="checklist-box">
       <span class="checklist-desc">本科毕业（证书）</span>
       <span class="checklist-meta">2015 Nov. 7</span>
     </li>
@@ -60,12 +60,12 @@ title: 欲望清单
   <h1 class="block-title"><a href="#electronic">Electronic</a></h1>
   <ul class="block-list">
     <li class="checklist-item">
-      <input type="checkbox" class="checklist-box">
+      <input type="checkbox" checked class="checklist-box">
       <span class="checklist-desc">Nexus 5x</span>
       <span class="checklist-meta">2015 Nov. 7</span>
     </li>
     <li class="checklist-item">
-      <input type="checkbox" class="checklist-box">
+      <input type="checkbox" checked class="checklist-box">
       <span class="checklist-desc">可以看 paper 的电子纸设备（屏幕足够大）</span>
       <span class="checklist-meta">2015 Nov. 7</span>
     </li>
